# utopia-maxxing

./: .gitignore  CLAUDE.md  analyze.py  blog_post.md  blog_post_hedonium.md  blog_post_no_top_seed.md  blog_post_path_dependence.md  blog_post_prompt_ablation.md  blog_post_prompt_meaning.md  blog_post_prompt_space.md  download_initial_population.py  evolve.py  evolve_litellm.py  explorer.py  launch_ablations.sh  lineage.py  pyproject.toml  summarize.py  visualize.ipynb
assets/: evolution_simulator.html  hedonium_essay_reader.html  hedonium_influence_explorer.html
hedonium_runs/fable-5/: lineage.json  metadata.json
hedonium_runs/gpt-5.5/: lineage.json  metadata.json
hedonium_runs/kimi-k2.5/: lineage.json  metadata.json
hedonium_runs/sonnet-5/: lineage.html  lineage.json  metadata.json
initial_population_hedonium/: hedonium-shockwave.txt
no_top_seed_runs/claude/: lineage.json  metadata.json
no_top_seed_runs/gemini/: metadata.json
no_top_seed_runs/gpt5/: lineage.json  metadata.json
no_top_seed_runs/kimi/: lineage.json  metadata.json
no_top_seed_runs/qwen/: lineage.json  metadata.json
population_no_utopia_lol/: my-vision-of-a-good-future-part-i.txt
prompt_generic_runs/claude/: lineage.json  metadata.json
prompts/: generic-crossover.txt  generic-selection.txt  meaning-crossover.txt  meaning-selection.txt  space-crossover.txt  space-selection.txt
runs/path-dep-gpt5/: lineage.json  (+1 more)
widgets/: build_evolution_simulator.py  build_hedonium_essay_reader.py  build_hedonium_influence_explorer.py  build_hedonium_lineage_explorer.py  build_lineage_explorer.py
(+5457 files in other folders)
